Changed the background colour on PRACTICE and the Large Screen background colour on index

--- a/PRACTICE.html
+++ b/PRACTICE.html
@@ -24,7 +24,7 @@
 
 
 
-<body style = "background-color: darkcyan;">
+<body style = "background-color: lightsteelblue;">
     <h1>Hello, World Wide Web!</h1>
     <p>This is my first website.</p>
     <h2>About me</h2>
