--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
             @media (min-width: 901px){
                 body{
-                    background-color: red;
+                    background-color: limegreen;
                     }
             }
 
