Changed the link color to magenta.

--- a/PRACTICE.html
+++ b/PRACTICE.html
@@ -10,7 +10,7 @@
 
     <style >
         a{
-            color:green;
+            color:magenta;
         }
         h1{
             color:darkgoldenrod;
