--- a/index.html
+++ b/index.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
-        <style>
-            @media (min-width: 901px){
-                body{
-                    background-color: limegreen;
-                    }
-            }
-
-            @media (max-width: 900px){
-                body{
-                background-color: gold;
-                }
-            }
+        <title>indexSearch</title>
+        <style >    
+        
         </style>
     </head>
 
-
     <body>
-
-        <form action="https://www.google.com/search">
-            <input type="text" name="q" >
-            <input type="submit" value="Google Search">
-        </form>
-
+        <!-- Form -->
+        <div>
+            <form action="https://www.google.com/search">
+                <!-- <input type="password" name="pass"><br> -->
+                <input type="text" name="q">
+                <input type="submit" value="Google Search">
+            </form>
+        </div>
     </body>
 
 
