Just made a few changes to update things after last commit and adding in the folder

--- a/trying/Scribble.html
+++ b/trying/Scribble.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>SCRIBBLING</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\Surface\Desktop\html\Scribble-style.css">
+        <link rel="stylesheet" type="text/css" href="Scribble-style.css">
     </head>
 
     <body >
