--- a/index.html
+++ b/index.html
@@ -2,18 +2,51 @@
 <html lang="en">
     <head>
         <title>indexSearch</title>
-        <style >    
+        <style >   
+            body{
+                margin: 0;
+            }
+
+            #links{
+                height: 5vh;
+                text-align: right;
+/*                border: 2px solid black;*/
+            }
+            #contain{
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: 95vh;
+                display: flex;
+            }
+
+
+            form{
+/*                border:2px solid darkblue;*/
+            }
         
         </style>
     </head>
 
     <body>
         <!-- Form -->
-        <div>
+        <div id="links"><br>
+            <a style="margin:0px 10px 0px 10px" href="https://www.google.ie/imghp?hl=en&ogbl"> Images</a>
+
+            <a style="margin:0px 10px 0px 10px" href="https://www.google.ie/advanced_search"> Adanced Search</a>
+        </div>
+
+
+        <div id="contain">
             <form action="https://www.google.com/search">
-                <!-- <input type="password" name="pass"><br> -->
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
+                <input style="border-radius: 30px; padding-left:15px; padding-right: 15px; border:1px solid rgba(0,0,0,0.5); height:5vh; width:40vw;" type="text" name="q">
+                <br><br>
+
+
+                <div style="display: flex; justify-content:center">
+                <input style="margin:10px;" type="submit" value="Google Search">    
+                <input style="margin:10px" type="submit" value="Feeling Lucky">
+                </div>             
             </form>
         </div>
     </body>
